# surgical-phase-colab-starter

./: .gitignore  README.md  docs_research_2023_2026.md  pyproject.toml  requirements.txt
configs/: base.yaml  frame_cnn.yaml  t4_cnn_lstm.yaml  t4_tcn.yaml  t4_transformer.yaml  tcn.yaml  transformer.yaml
notebooks/: 01_dataset_setup_and_eda.ipynb  02_training_pipeline_colab.ipynb
scripts/: build_manifest.py  eval.py  pretrain_simclr.py  search.py  train.py
src/surgical_phase/: __init__.py
src/surgical_phase/data/: __init__.py  dataset.py  manifest.py
src/surgical_phase/engine/: __init__.py  evaluate.py  metrics.py  trainer.py
src/surgical_phase/models/: __init__.py  backbones.py  ssl.py  temporal.py
src/surgical_phase/utils/: io.py
